--- a/calendar.tex
+++ b/calendar.tex
@@ -21,23 +21,12 @@
 
 \newcommand*{\myalign}[2]{\multicolumn{1}{#1}{#2}}
 \newcommand{\gfx}[2]{\newline\vspace{0.5em}\myalign{c}{\includegraphics[scale=#1]{#2}}}
-\newcommand{\nl}{\\[2.1cm]\hline}
+\newcommand{\nl}{\\[2.0cm]\hline}
 \newcommand{\nd}[1]{\textcolor[rgb]{0.6,0.6,0.6}{#1}}
 \newcommand{\ns}[1]{\textcolor[rgb]{1,0.6,0.6}{#1}}
 \newcommand{\rd}[1]{\textcolor[rgb]{1,0,0}{\textbf{#1}}}
 \newcommand{\tb}[1]{\textbf{#1}}
 
 \begin{document}
-\include{jan}
-\include{feb}
-\include{mar}
-\include{apr}
-\include{may}
-\include{jun}
-\include{jul}
-\include{aug}
-\include{sep}
-\include{okt}
-\include{nov}
-\include{dec}
+\input{template}
 \end{document}
