--- a/image.tex
+++ b/image.tex
@@ -1,2 +1,1 @@
-\noindent\includegraphics[scale=0.7425]{sunrise}\\
-\textit{\textsc{Soluppgång i Fuengirola, Spanien.}}\hfill\textit{\textsc{9 juli 2015}}
+\noindent\includegraphics[scale=0.7425]{ggb.jpg}\\\textit{\textsc{desc}}\hfill\textit{\textsc{date}}
