--- a/image.tex
+++ b/image.tex
@@ -1,1 +1,1 @@
-\noindent\includegraphics[scale=0.7425]{ggb.jpg}\\\textit{\textsc{desc}}\hfill\textit{\textsc{date}}
+\noindent\includegraphics[scale=0.7425]{ggb.jpg}\\\textit{\textsc{}}\hfill\textit{\textsc{}}
