Improved file structure because too many files

--- a/tex/template.tex
+++ b/tex/template.tex
@@ -1,10 +1,10 @@
 \pagestyle{empty}
 \begin{center}
-  \input{image}
+  \input{tex/image}
 \end{center}
 \newpage
 \begin{center}
-  \input{month_name}
+  \input{tex/month_name}
 \end{center}
 \begin{tabularx}{\textwidth}{@{}RRRRRRS}
   \textbf{\textsc{Måndag}}&\textbf{\textsc{Tisdag}}&\textbf{\textsc{Onsdag}}&\textbf{\textsc{Torsdag}}&\textbf{\textsc{Fredag}}&\textbf{\textsc{Lördag}}&\textbf{\textsc{Söndag}}\\
@@ -12,5 +12,5 @@
 \\
 \begin{tabularx}{\textwidth}{|D|D|D|D|D|D|Z|}
   \hline
-  \input{days}
+  \input{tex/days}
 \end{tabularx}
