--- a/tex/template.tex
+++ b/tex/template.tex
@@ -7,7 +7,7 @@
   \input{tex/month_name}
 \end{center}
 \begin{tabularx}{\textwidth}{@{}RRRRRRS}
-  \textbf{\textsc{Måndag}}&\textbf{\textsc{Tisdag}}&\textbf{\textsc{Onsdag}}&\textbf{\textsc{Torsdag}}&\textbf{\textsc{Fredag}}&\textbf{\textsc{Lördag}}&\textbf{\textsc{Söndag}}\\
+  \input{tex/weekdays}
 \end{tabularx}
 \\
 \begin{tabularx}{\textwidth}{|D|D|D|D|D|D|Z|}
